--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ classifiers = [
 [tool.poetry.dependencies]
 python = "^3.9"
 requests = "^2.31.0"
+asyncio = "^3.4.3"
+aiohttp = "^3.9.0"
+aiosignal = "^1.3.1"
 
 [tool.poetry.dev-dependencies]
 
